--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,9 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:hint="example@email.com"/>
+        android:hint="example@email.com"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/password"
